--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "fideloper/proxy": "^4.4",
         "laravel/framework": "^6.20",
         "laravel/tinker": "^2.5",
-        "ramsey/uuid-doctrine": "^1.6"
+        "lcobucci/jwt": "3.3.3",
+        "ramsey/uuid-doctrine": "^1.6",
+        "tymon/jwt-auth": "1.0.0-rc.5"
     },
     "require-dev": {
         "facade/ignition": "^1.16.4",
