login with socialite

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/dbal": "2.*",
         "fideloper/proxy": "^4.4",
         "laravel/framework": "^6.20",
+        "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "lcobucci/jwt": "3.3.3",
         "ramsey/uuid-doctrine": "^1.6",
