--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "lcobucci/jwt": "3.3.3",
+        "pusher/pusher-php-server": "~4.0",
         "ramsey/uuid-doctrine": "^1.6",
         "tymon/jwt-auth": "1.0.0-rc.5"
     },
